--- a/app/ui/globals.css
+++ b/app/ui/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+html,
+body {
+  font-family: var(--font-nunito-sans), Helvetica, Arial, Lucida, sans-serif;
+  margin: 0;
+}
